# desk-control

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/desk/: bluetooth.rs  mod.rs  protocol.rs
src/ui/: icons.rs  menu_bar.rs  mod.rs  tray_app.rs
