[package]
name = "desk-control"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = "1.6"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tray-icon = "0.14"
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.10"
gtk = "0.18"
glib = "0.18"
